re PR libfortran/30200 ([4.1 only] write(*,myfmt="(1X,a,'xyz')") "A"  prints  Az' instead of Axyz)

2006-12-15  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/30200
	* trans-io.c (build_dt): Move post block for format_expr to end.

From-SVN: r119940